Added version 7.0.3495